[package]
name = "bootloader"
version = "0.1.0"
authors = ["spxg <itsme@spxg.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6.12"
stm32f1xx-hal = {version = "0.5.3", features = ["stm32f103", "rt"]}
embedded-hal = "0.2.3"
embedded-sdmmc = "0.3.0"
nb = "0.1.2"