[package]
name = "bootloader"
version = "0.1.2"
authors = ["spxg <itsme@unsafe.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6.12"
fat32 = "0.2"

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["stm32f407", "rt"]

[dependencies.sdio_sdhc]
version = "0.2"
features = ["filesystem"]